--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Notifique os clientes do seu negócio pelo WhatsApp a partir do seu painel de pedidos.",
   "version": "1.0",
   "permissions": ["debugger", "tabs"],
-  "host_permissions": ["https://instadelivery.com.br/store/orders/*"],
+  "host_permissions": ["https://instadelivery.com.br/store/orders/*", "https://restful-booker.herokuapp.com/*"],
   "action": {
     "default_popup": "/src/pages/popup/popup.html",
     "default_icon": {
