--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "description": "Notifique os clientes do seu negócio pelo WhatsApp a partir do seu painel de pedidos.",
   "version": "1.0",
   "author": "Notifyer Team",
-  "permissions": ["debugger", "tabs", "storage"],
-  "host_permissions": ["https://instadelivery.com.br/store/orders/*"],
+  "permissions": ["debugger", "tabs", "storage", "scripting"],
+  "host_permissions": ["https://instadelivery.com.br/*"],
   "options_page": "/src/pages/options/options.html",
   "action": {
     "default_popup": "/src/pages/popup/popup.html",
@@ -23,21 +23,23 @@
     "128": "/images/icon-128.png"
   },
   "background": {
-    "service_worker": "./src/services/service-worker.service.js",
+    "service_worker": "/src/services/service-worker.service.js",
     "script": ["./src/class/logdata-model.js", "./src/services/database.service.js"],
     "type": "module"
   },
   "content_scripts": [
     {
       "matches": ["https://instadelivery.com.br/store/orders/*"],
-      "js": ["./src/scripts/content-script.js"],
+      "js": ["src/scripts/content-script.js"],
       "run_at": "document_end"
     }
   ],
-  "web_accessible_resources": [{
-    "resources": ["./src/scripts/interceptor.js"],
-    "matches": ["https://instadelivery.com.br/*"]
-  }],
+  "web_accessible_resources": [
+    {
+      "resources": ["src/scripts/interceptor.js"],
+      "matches": ["https://instadelivery.com.br/*"]
+    }
+  ],
   "commands": {
     "openOptions": {
       "suggested_key": {
