--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Notifique os clientes do seu negócio pelo WhatsApp a partir do seu painel de pedidos.",
   "version": "1.0",
   "author": "Notifyer Team",
-  "permissions": ["debugger", "tabs", "storage", "scripting", "cookies"],
+  "permissions": ["debugger", "tabs", "storage", "scripting", "cookies", "activeTab"],
   "host_permissions": [
     "<all_urls>"
   ],
